mods/poker/web/css/poker-base.css
body {
  font-family: arial, helvetica, sans-serif;
  font-size: 14px;
  padding: 0px;
  margin: 0px;
  overflow: hidden; 
  position: fixed;
  width: 100vw;
  height: 100vh;
}


.player-box-body .status .status-header .status-message {
  box-shadow: none;
}

.saito-balance {
    float: right;
    margin-top: 0.2rem;
}

.player-box-body .status {
    width: 100%;
    padding: 0rem;
    margin-top: 0.5rem;
    line-height: 2.3rem;
    font-size: 1.8rem;
}

.player-box .status-header .status-message {
    background: unset;
}
.player-box .status-text-menu ul li:hover, .player-box .textchoice:hover {
  background-color: whitesmoke;
}
.player-box .status-text-menu, .player-box .status-text-menu ul {
    background: unset;
}

.player-box-head .saito-user>.saito-address , .player-box-head .saito-user>.saito-userline {
  color: white;
}

.cardfan {
  max-height: 20vh;
  max-width: 20vw;
}


.gameboard{
  /* Default fill the background with image */
  position: absolute;
  background-image: url(/saito/img/arcade/greenfelt.jpg);
  background-size: cover;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.crypto_logo{
  position: absolute;
  bottom: 0;
  left: 0;
  width: 20vw;
}

.player-box{
  max-width: 250px;
  border: 1px solid #FFF3;
  min-height: unset;
}

.player-box-graphic{
  position: absolute;
  height: 100%;
  width: 100%;
  z-index: -10;
}



/* Since Poker only has two cards in a hand, can adjust the angles*/
.cardfan>.card:nth-child(1), .hand>.card:nth-child(1) {
  transform: rotate(-15deg);
  left: 0px; 
} 
  
.cardfan>.card:nth-child(2), .hand>.card:nth-child(2) {
  transform: rotate(-5deg);
  left: 3vh;
}


.hand {
  position: relative;
}

.poker-seat-1 .hand{
  display: block;
  right: 15vh;
  top: 8vh;
}


/* display chips */
.chip_stack{
  position: relative;
  top: 100%;
  left: 100%;
  filter: drop-shadow(6px 6px 4px #000A);
}

.poker-seat-1 .chip_stack{
  top: 85%;
}

.poker-seat-5 .chip_stack{
  left: 100%;
}
.chip_stack .poker_chip{
  position: absolute;
  width: 100px;
}

.chip_stack .chipstack-identicon{
  position: absolute;
  width: 80px;
  transform: rotate3d(1, 0, 0, 78deg);  
  left: 10px;
  border-radius: 30px;

}


/*.pstack1 .poker_chip, #stripes1{
  fill: #ff1205;
}
.pstack2 .poker_chip, #stripes2{
  fill: #ff05f2;
}
.pstack3 .poker_chip, #stripes3{
  fill: #05ff12;
}
.pstack4 .poker_chip, #stripes4{
  fill: #05f2ff;
}
.pstack5 .poker_chip, #stripes5{
  fill: #1205ff;
}
.pstack6 .poker_chip, #stripes6{
  fill: #f2ff05;
}*/

.poker-seat-2 .chip_stack, .poker-seat-3 .chip_stack{
  left: unset;
  right: 100px;
}

.flip-card , .card {
  width: 11vw;
}

.flip-card .card {
  position: absolute;
}

.cardFront, .cardBack{
  transition: transform 0.5s ease;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}

.cardFront{
  transform: rotateY(180deg);
}
.flipped .cardFront{
  transform: rotateY(0deg);
}
.cardBack{
  transform: rotateY(0deg);
}
.flipped .cardBack{
  transform: rotateY(-180deg);
}


.deal {
  margin: 0 auto;
  position: absolute;
  top: 30vh;
  left: 50vw;
  transform: translateX(-50%);
  width: unset;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-column-gap: 1rem;
  padding: 2rem;
}

.pot {
    position: relative;
    background-color: #0007;
    font-size: 3rem;
    top: 22vh;
    height: 5.5rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
    border-radius: 0.5rem;
    width: max-content;
    min-width: max-content;
    max-width: max-content;
    display: block;
    margin: 0 auto;
}

.pot-counter{
  text-align: center;
  font-weight: bold;
  color: #efefef;
  width: 100%;
  margin: 0;
  padding: 0;
}

.pot .chip_stack{
  top:  unset;
  left: unset;
  width: 100px;
}

.player-info-chips {
  text-align: center;
  font-size: max(1em,2.5vh);
  overflow: hidden;
  position: relative;
  top: -1.8rem;
  font-size: 1.5rem;
  float: right;
}

.plog-update{
  text-align: center;
  padding-top: 1.5rem;
  padding-bottom: 0.8rem;
  font-size: 1.8rem;
}

.plog ul {
  margin-top: 0.5rem;
}

.suit {
  font-size: larger;
}

.htmlhand{
  text-indent: 0; 
}

.htmlCard {
  margin: 5px 3px;
  display: inline-block;
  background: #fffD;
  padding: 4px 3px;
  border-radius: 6px;
}


/*Playerbox text menu prompt*/
.menu-player-upper {
    font-size: 1.4rem;
    font-weight: bolder;
    width: 100%;
    margin-top: -1.8rem;
    position: absolute;
    padding-right: 1.8rem;
}


/* Player Markers */
.dealerbutton{
  color: #fff;
  width: 1em;
  margin-left: 0.5vw;
  font-size: 2.5vh;
  line-height: 2.5vh;
  -webkit-text-stroke: 1px #444;
  position: fixed;
  left: 0.25rem;
  top: 4rem;
}
.tip{
  width: unset;
}
.tip .tiptext{
  font-size: 20px;
  min-width: 100px;
  text-align: center;
  width: unset;
  border: none;
  /*line-height: 1em;*/
  padding: 0.5em;
  background-color: #fefefeee;
}


@media screen and (max-width: 1200px) {

  .flip-card , .card {
    width: 13vw;
  }

}

@media screen and (max-width: 800px) {

  .flip-card , .card {
    width: 15vw;
  }

}

@media screen and (max-width: 600px) {

  .flip-card , .card {
    width: 17vw;
  }

}

@media screen and (orientation: landscape) and (max-height: 600px) {

  .flip-card , .card {
    width: 20%;
  }

  .chip_stack {
    display: none;
  }

  .game-scoreboard{
    top: unset;
    left: unset;
    transform: unset;
    bottom: 0;
    right: 0;
    flex-direction: column;
    padding: 4px;
    max-width: 30vw;
  }
  .scoreitem{
    width: calc(100% - 8px);
    padding: unset;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .menu-player{
    font-size: 0.9em;
    font-weight: normal;
    margin: 0.3vh auto;
  }

  .poker-seat-1 .player-box-info{
    position: absolute;
    top: 0;
    right: 0;
  }
 
}


@media screen and (orientation: portrait) and (max-width: 600px) {

  .flip-card {
    width: 18vw;
  }

  .chip_stack {
    display: none;
  }

  .cardfan {
    left: 38vw;
    top: 53vh;
    position: absolute;
    width: 100%;
  }

  .cardfan .card {
    width: min(26vh,26vw);
  }

  .game-scoreboard{
    top: unset;
    left: unset;
    transform: unset;
    bottom: 0;
    right: 0;
    flex-direction: column;
    padding: 4px;
    max-width: 20vw;
  }

  .scoreitem{
    width: calc(100% - 8px);
    padding: unset;
    overflow: hidden;
    text-overflow: ellipsis;
  }

}

